# fim-whodata-ebpf

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: basic_monitor.rs
fim-whodata-ebpf-bpf/: Cargo.toml
fim-whodata-ebpf-bpf/src/: main.rs
fim-whodata-ebpf-common/: Cargo.toml
fim-whodata-ebpf-common/src/: lib.rs
src/: events.rs  lib.rs  main.rs  monitor.rs
xtask/src/: main.rs
