[package]
name = "fim-whodata-ebpf"
version = "0.1.0"
edition = "2021"
description = "High-performance File Integrity Monitoring with eBPF and Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fim-whodata-ebpf"

[[bin]]
name = "fim-whodata-ebpf"
path = "src/main.rs"

[workspace]
members = [
    "fim-whodata-ebpf-bpf",
    "fim-whodata-ebpf-common",
    "xtask",
]

[dependencies]
fim-whodata-ebpf-common = { path = "fim-whodata-ebpf-common" }
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "fs", "time"] }
bytes = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[build-dependencies]
aya-tool = "0.1"
